--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
+    "@angular/animations": "^19.0.6",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -22,6 +22,7 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "angular-animations": "^0.11.0",
     "express": "^4.18.2",
     "ngx-slick-carousel": "^19.0.0",
     "rxjs": "~7.8.0",
